<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ordersListFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="ru.dikoresearch.aridewarehouse.presentation.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_ordersListFragment"
            app:destination="@id/ordersListFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/ordersListFragment"
        android:name="ru.dikoresearch.aridewarehouse.presentation.orderslist.OrdersListFragment"
        android:label="@string/list_of_orders"
        tools:layout="@layout/fragment_orders_list">
        <action
            android:id="@+id/action_ordersListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/ordersListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_ordersListFragment_to_cameraScannerFragment"
            app:destination="@id/cameraScannerFragment" />
        <action
            android:id="@+id/action_ordersListFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/cameraScannerFragment"
        android:name="ru.dikoresearch.aridewarehouse.presentation.scanner.CameraScannerFragment"
        android:label="CameraScannerFragment" >
        <action
            android:id="@+id/action_cameraScannerFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/ordersListFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="ru.dikoresearch.aridewarehouse.presentation.orderdetails.OrderDetailsFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_order_details">
        <action
            android:id="@+id/action_orderDetailsFragment_to_imagePreviewFragment"
            app:destination="@id/imagePreviewFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_orderDetailsFragment_to_cameraFragment"
            app:destination="@id/cameraFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/imagePreviewFragment"
        android:name="ru.dikoresearch.aridewarehouse.presentation.imagepreview.ImagePreviewFragment"
        android:label="@string/image_preview" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="ru.dikoresearch.aridewarehouse.presentation.camera.CameraFragment"
        android:label="CameraFragment" >
        <action
            android:id="@+id/action_cameraFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/orderDetailsFragment" />
    </fragment>
</navigation>