<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.orderdetails.OrderDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/orderDetailsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/orderNameCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsToolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="8dp"
        android:clickable="true">

        <TextView
            android:id="@+id/orderNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="123456789"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_margin="8dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/orderInfoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orderNameCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="8dp"
        android:clickable="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/order_info_text"
                    android:text="@string/order_status"/>

                <TextView
                    android:id="@+id/orderStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/order_info_text"
                    tools:text="New"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/info_order_user"
                    style="@style/order_info_text"/>

                <TextView
                    android:id="@+id/orderUsernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/order_info_text"
                    tools:text="DiKo"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_info_created_at"
                    style="@style/order_info_text"/>

                <TextView
                    android:id="@+id/orderCreatedAtTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="04/11/2022 11:45"
                    style="@style/order_info_text"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/orderCommentCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orderInfoCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="8dp"
        android:clickable="true">

        <EditText
            android:id="@+id/orderCommentEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_comment_hint"
            android:inputType="textMultiLine"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/orderGoodsCardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/orderCommentCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/orderGoodsTableColumnsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/goodsTableArt"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="Арт"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="4dp"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/goodsTableName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    card_view:layout_constraintStart_toEndOf="@id/goodsTableArt"
                    card_view:layout_constraintEnd_toStartOf="@id/goodsTableQuantity"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="4dp"
                    android:textSize="12sp"
                    android:text="Наименование"/>

                <TextView
                    android:id="@+id/goodsTableQuantity"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@id/goodsTableCheck"
                    android:layout_margin="4dp"
                    android:textSize="12sp"
                    android:text="К-о"
                    />

                <TextView
                    android:id="@+id/goodsTableCheck"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderGoodsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/order_goods_item"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderImagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orderGoodsCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp" />



    <Button
        android:id="@+id/orderUploadToServerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_to_server"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/orderDetailsViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="orderUploadToServerBtn, orderImagesRecyclerView, orderCommentCardView, orderInfoCardView"/>

    <ProgressBar
        android:id="@+id/orderDetailsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/airbag_spinner"
        android:indeterminateOnly="true"

        android:visibility="gone"
        tools:visibility="visible"

        app:layout_constraintTop_toBottomOf="@id/orderDetailsToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>